# ruan

./: .gitignore  CMakeLists.txt  from.tga  main.c  tga.h  to.tga  to2.tga  types.h
macos/: CMakeLists.txt  Info.plist  macos.m
notes/: 重心坐标.md
ruan/: CMakeLists.txt  darray.c  darray.h  geometry.c  geometry.h  mesh.c  mesh.h  obj.h  platform.h  ruan.c  ruan.h  test.c  tga.c  tga.h  types.h
sample/: CMakeLists.txt  Info.plist  macos.m  sample.c
sample/res/: african_head_diffuse.tga
